<resources>


    <!-- Name der Activity -->
    // TextField = tv
    // EditText = et
    // Button = btn


    <!-- Allgemeine Wörter/Texte/Sätze -->
    <string name="_fehler">Fehler</string>
    <string name="_anmerkung">Anmerkung</string>
    <string name="_wichtig">Wichtig</string>
    <string name="_info">Info</string>
    <string name="_information">Information</string>
    <string name="_null">00:00</string>
    <string name="_stop">Stop</string>
    <string name="_start">Start</string>
    <string name="_warte">Warte</string>


    <!-- DASHBOARD -->
    <string name="app_name">Sammlung</string>
    <string name="btn_alertDialog">AlertDialog</string>
    <string name="btn_animationVerblassung">AnimationVerblassung</string>
    <string name="btn_bewertung">Bewertung</string>
    <string name="btn_checkNetzwerk">CheckNetzwerk</string> // Wird zwei mal genutzt
    <string name="btn_datePicker">Date Time Picker</string>
    <string name="btn_imageEinbindenUndAendern">ImageEinbindenÄndern</string>
    <string name="btn_listView">ListView</string>
    <string name="btn_progressbar">Progressbar</string>
    <string name="btn_zeigeStandort">Zeige mir den Standort</string>
    <string name="btn_swipeSide">Swipe Side</string>
    <string name="btn_ticTacToe">TicTacToe</string>
    <string name="btn_toastNachWunscheingabe">ToastWunscheingabe</string>
    <string name="btn_timer">Timer</string>
    <string name="btn_visibility">Visibility</string>
    <string name="btn_brainTrainer">Brain Trainer</string>
    <string name="btn_reaktion">Reaktionstest</string>


    <!-- CheckNetzwerk -->
    <string name="tv_netzwerkverbindung">Netzwerkverbindung</string>


    <!-- Progressbar -->
    <string name="tv_ziel">Bitte fülle die leere Leiste in dem du auf den Knopf "Klick mich oft" klickst.</string>
    <string name="tv_achtung">!Achte bitte auf die korrekte Ausführung!</string>
    <string name="btn_infoText">Klick mich oft</string>


    <!-- ToastNachWunscheingabe -->
    <string name="et_individuelle_Eingabe">Deine individuelle Eingabe</string>
    <string name="btn_toastAusgeben">Dein Toast ausgeben</string>


    <!-- TicTacToe -->
    <string name="tv_gewonnenerSpieler">Spieler</string>
    <string name="btn_neuesSpiel">Neues Spiel</string>


    <!-- Timer -->
    <string name="btn_go">Timer starten</string>
    <string name="tv_time">10:00</string>


    <!-- Layouts-->
    <!-- AllesInsGold -->
    <string name="leer">0</string>
    <string name="leer00">00</string>
    <string name="leer000">000</string>
    <string name="passeZwei">06</string>
    <string name="passeVier">12</string>
    <string name="passeSechs">18</string>
    <string name="passeAcht">24</string>
    <string name="passeZehn">30</string>
    <string name="treffer">Treffer:</string>
    <string name="zehnerTreffer">10er-Treffer:</string>
    <string name="neunerTreffer">_9er-Treffer:</string>
    <string name="summeText">SUMME:</string>
    <string name="menu_summeBerechnen">Summe berechnen</string>
    <string name="speichern">Speichern</string>
    <string name="nulll">m</string>
    <string name="eins">1</string>
    <string name="zwei">2</string>
    <string name="drei">3</string>
    <string name="vier">4</string>
    <string name="fuenf">5</string>
    <string name="sechs">6</string>
    <string name="sieben">7</string>
    <string name="acht">8</string>
    <string name="neun">9</string>
    <string name="zehn">10</string>
    <string name="x">X</string>
    <string name="summe">Summe</string>


</resources>
