<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <Button
        android:text="@string/zwei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_toStartOf="@+id/button"
        android:id="@+id/button2"/>

    <Button
        android:text="@string/drei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_toEndOf="@+id/button2"
        android:id="@+id/button3"/>

    <Button
        android:text="@string/vier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:id="@+id/button4"/>

    <Button
        android:text="@string/fuenf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_toEndOf="@+id/button4"
        android:id="@+id/button5"/>

    <Button
        android:text="@string/sechs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:id="@+id/button6"/>

    <Button
        android:text="@string/acht"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_toEndOf="@+id/button6"
        android:id="@+id/button7"/>

    <Button
        android:text="@string/neun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:layout_toStartOf="@+id/button7"
        android:id="@+id/button8"/>

    <Button
        android:text="@string/zehn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7"
        android:layout_toEndOf="@+id/button8"
        android:id="@+id/button9"/>

    <Button
        android:text="@string/x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button9"
        android:layout_toEndOf="@+id/button8"
        android:id="@+id/button11"/>

    <Button
        android:text="@string/nulll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/m"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/button2"
        android:layout_marginTop="118dp"/>

    <Button
        android:text="@string/eins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_alignBaseline="@+id/m"
        android:layout_alignBottom="@+id/m"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="42dp"
        android:id="@+id/summe"
        android:hint="@string/summe"/>

    <TextView
        android:text="@string/summeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/summe"
        android:layout_toStartOf="@+id/summe"
        android:id="@+id/textView4"/>
</RelativeLayout>