<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="schilkroete.sammlung.MainActivity">


    <Button
        android:id="@+id/btn_alertdialog"
        android:text="@string/btn_alertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btn_verblasse"
        android:text="@string/btn_animationVerblassung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_alertdialog"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btn_checkNetzwerk"
        android:text="@string/btn_checkNetzwerk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_verblasse"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btn_imageEinbindenUndAendern"
        android:text="@string/btn_imageEinbindenUndAendern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_checkNetzwerk"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btn_progressbar"
        android:text="@string/btn_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_imageEinbindenUndAendern"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btn_standortGeben"
        android:text="@string/btn_zeigeStandort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_progressbar"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btn_tictactoe"
        android:text="@string/btn_ticTacToe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_standortGeben"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btn_toastNachWunsch"
        android:text="@string/btn_toastNachWunscheingabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_tictactoe"
        android:layout_alignStart="@+id/btn_imageEinbindenUndAendern"/>


</RelativeLayout>
