<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="schilkroete.sammlung.Progressbar">

    <TextView
        android:text="@string/tv_ziel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:text="@string/tv_achtung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"/>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dip"
        android:minWidth="200dip"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_infoText"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/progressBar1"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
